power: Fix notification never showing up

Added devices on coldplug were never actually processed, and
the warning level of the composite device was set to its current
value, so that a change never triggered.

This only happened on startup, and affected GNOME 3.8 as well.

https://bugzilla.gnome.org/show_bug.cgi?id=709576